# async-api-for-cinema

./: .env.dist  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.main.yml  docker-compose.prod.yml  docker-compose.yml  init.sql  nginx.conf  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
admin/: entrypoint.sh  gunicorn.conf.py  readme.md  requirements.txt  setup.cfg
analysis-of-analytical-storages/: README.md  RESULTS.md  class_speed_test.py  clickhouse.ipynb  docker-compose.yml  mongo.ipynb  requirements.txt  test.py  test_insert.py  test_old.py  test_read.py
analysis-of-analytical-storages/vokson/: README.md  docker-compose.yml  insert.py  pyproject.toml  read.py  speed_test.py
analysis-of-analytical-storages/vokson/db/clickhouse/: data_scheme.py
analysis-of-analytical-storages/vokson/db/vertica/: data_scheme.py
analysis-of-analytical-storages/vokson/test_data/: fake_data.py  gen.py
api/: readme.md  requirements.txt
architecture/: AS_TO_BE.puml
async-api/: .env  .env.dist  .env.docker  Dockerfile  Makefile  docker-compose.dev.yml  docker-compose.yml  requirements.txt
auth/: .env  .env.dist  .env.local  Dockerfile  README.md  README_DEV.md  alembic.ini  app.py  config.py  createsuperuser.py  db.py  dev.Dockerfile  entrypoint.sh  pywsgi.py  requirements.txt  uwsgi.ini  wsgi_app.py
billing_service/: .env.sample  Dockerfile  README.md  requirements.txt  run_uwsgi.sh
configs/: site.conf
doc/: api.drawio  api.uml  tasks.md
kafka/: .env.dev  .env.prod  consumer.py  docker-compose.yml  init_clickhouse.py  (+2 more)
(+505 files in other folders)
