[tool.poetry]
name = "vokson"
version = "0.1.0"
description = ""
authors = ["jcartwri <zah.1234@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
clickhouse-driver = "^0.2.5"
vertica-python = "^1.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
